crates/schema/tests/compile_fail/string_no_min.stderr
error[E0599]: the method `min` exists for struct `StringBuilder`, but its trait bounds were not satisfied
 --> tests/compile_fail/string_no_min.rs:2:50
  |
2 |       let _ = nebula_schema::Field::string("name").min(1);
  |                                                    ^^^ method cannot be called on `StringBuilder` due to unsatisfied trait bounds
  |
 ::: src/field.rs
  |
  | /         pub struct $name {
  | |             /// Stable field key.
  | |             pub key: FieldKey,
  | |             /// Human-readable label.
... |
  | |             $(pub $extra: $ty,)*
  | |         }
  | |_________- doesn't satisfy `StringBuilder: Iterator` or `StringBuilder: Ord`
  |
  = note: the following trait bounds were not satisfied:
          `StringBuilder: Ord`
          which is required by `&StringBuilder: Ord`
          `StringBuilder: Ord`
          which is required by `&mut StringBuilder: Ord`
          `StringBuilder: Iterator`
          which is required by `&mut StringBuilder: Iterator`
